--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
       <div>
-        <video class="vid" loop autoplay muted preload="auto" crossorigin="anonymous">
+        <video class="vid" loop autoplay playsinline muted preload="auto" crossorigin="anonymous">
           <source src="assets/vid.mp4" type="video/mp4">
         </video>
         <svg>
