--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div class="hero">
       <div>
-        <video class="vid" loop autoplay playsinline muted preload="auto" crossorigin="anonymous">
-          <source src="assets/vid.mp4" type="video/mp4">
-        </video>
+        <div class="vid">
+          <video class="vid" loop autoplay playsinline muted preload="auto" crossorigin="anonymous">
+            <source src="assets/vid.mp4" type="video/mp4">
+          </video>
+        </div>
         <svg>
           <filter id="filter1" color-interpolation-filters="sRGB" x="0" y="0" width="100%" height="100%">
             <feBlend mode="normal" x="0%" y="0%" in="SourceGraphic" in2="flood" result="blend1" />
