--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero">
       <div>
         <div class="vid">
-          <video loop autoplay playsinline muted preload="auto" crossorigin="anonymous">
+          <video class="vid" loop autoplay playsinline muted preload="none" crossorigin="anonymous">
             <source src="assets/vid.mp4" type="video/mp4">
           </video>
         </div>
