--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="hero">
       <div>
-        <div class="vid">
+        <div class="video-container">
           <video class="vid" loop autoplay playsinline muted preload="none" crossorigin="anonymous">
             <source src="assets/vid.mp4" type="video/mp4">
           </video>
